# routes/index.js
@@ -3,6 +3,6 @@ const router = express.Router();
 
 
 router.use('/', require('./swagger'))
-router.use('/contacts', require('./contacts'))
+router.use('/movies', require('./movies'))
 
 module.exports = router;
